refactor: Update QualysApi to use tags instead of asset groups in API calls and improve XML request handling